--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "embla-carousel-react": "^8.0.0-rc22",
+    "mdb-react-ui-kit": "^7.2.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
