--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@mui/system": "^5.15.9",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "embla-carousel-react": "^8.0.0-rc22",
